floating button applied

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-
+    <a id = "buttonFloat"></a>
     <!-- Navigation bar -->
 
     <nav class="sticky-top navbar navbar-expand-lg navbar-light">
