Floating button design and font made good

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <!-- FontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="undefined" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="undefined" crossorigin="anonymous"> -->
+
+    <script src="https://kit.fontawesome.com/494cd39dc5.js" crossorigin="anonymous"></script>
 
     <!-- Google font html attempt -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
