navbar styling improved for mobile version placing in row

--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 </head>
 
 <body>
-    <a id = "buttonFloat"></a>
+    <a id="buttonFloat"></a>
     <!-- Navigation bar -->
 
     <nav class="sticky-top navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand nav-link" href="#">
-            <i class="fas fa-suitcase" aria-hidden="true"><span id = "nav-staycation-britain"> Staycation Britain</span></i>
-           
+            <i class="fas fa-suitcase" aria-hidden="true"><span id="nav-staycation-britain"> Staycation
+                    Britain</span></i>
+
             <span class="sr-only">Suitcase icon</span>
         </a>
 
@@ -85,7 +86,7 @@
     <div class="jumbotron-fluid">
         <div class="container-fluid">
             <div class="row">
-                    <div id="hero">
+                <div id="hero">
                 </div>
                 <div class="row">
                     <h1 class="display-4">Staycation Britain</h1>
@@ -97,7 +98,7 @@
     <!-- Introduction -->
 
     <div class="container">
-        <h2 class = "title-intro">Places to stay in Britain</h2>
+        <h2 class="title-intro">Places to stay in Britain</h2>
         <p class="intro"><span class="capital">W</span>ell it’s that time of the year and you’ve decided you
             want to get away.<br>
             Britain has some fantastic beaches whether you like sand, pebbles, amusement
@@ -137,8 +138,9 @@
                     alt="Brighton pier, UK, with sunset in the background">
                 <div class="card-body">
                     <h5 class="card-title">BRIGHTON</h5>
-                    <a class="read_more_button" data-content="toggle-text">Read more</a>
-                    <p class="card-text panel-collapse collapse in"><span class="capital">T</span>he city is just a 60 minute train ride from
+
+                    <p class="card-text panel-collapse collapse in"><span class="capital">T</span>he city is just a 60
+                        minute train ride from
                         London and only 30 minutes train ride from Gatwick Airport.
                         <br>
                         Brighton Station is right in the city centre so you will be able to
@@ -166,6 +168,7 @@
                         beautiful
                         spot for cycling, hiking and other activities.
                     </p>
+                    <a class="read_more_button" data-content="toggle-text">Read more</a>
                 </div>
                 <div class="container-fluid">
                     <div id="map-brighton">
@@ -178,10 +181,12 @@
                 <img src="assets/images/newquay.jpg" class="card-img-top" alt="Popular Newquay beach">
                 <div class="card-body">
                     <h5 class="card-title">NEWQUAY</h5>
-                    <a class="read_more_button" data-content="toggle-text">Read more</a>
-                    <p class="card-text panel-collapse collapse i"><span class="capital">L</span>ocated on Cornwall’s Atlantic Coast, Newquay has
+
+                    <p class="card-text panel-collapse collapse i"><span class="capital">L</span>ocated on Cornwall’s
+                        Atlantic Coast, Newquay has
                         previously been voted
-                        as “One of the Nation's Favourite Seaside Towns”<br> in the prestigious Which Holiday Survey, “Best
+                        as “One of the Nation's Favourite Seaside Towns”<br> in the prestigious Which Holiday Survey,
+                        “Best
                         Family
                         Holiday Destination” by readers of COAST magazine, and recently won Gold for “Best Seaside Towns
                         for Families 2019” by Days Out with the Kids.
@@ -204,6 +209,7 @@
                         <br>
                         This world class beach is also home to some of the biggest events and festivals.
                     </p>
+                    <a class="read_more_button" data-content="toggle-text">Read more</a>
                 </div>
                 <div class="container-fluid">
                     <div id="map-newquay">
@@ -216,8 +222,9 @@
                 <img src="assets/images/cardigan-bay.jpg" class="card-img-top" alt="Overview of Cardigan Bay">
                 <div class="card-body">
                     <h5 class="card-title">CARDIGAN BAY</h5>
-                    <a class="read_more_button" data-content="toggle-text">Read more</a>
-                    <p class="card-text panel-collapse collapse in"><span class="capital">C</span>ardigan, West Wales, is the gateway to the Teifi
+
+                    <p class="card-text panel-collapse collapse in"><span class="capital">C</span>ardigan, West Wales,
+                        is the gateway to the Teifi
                         Valley and the Ceredigion and
                         Pembrokeshire Coastal Paths.
                         The ancient town sits on the estuary of the River Teifi at the base
@@ -239,6 +246,7 @@
                         Please do not bring your dog. The immediate area is sympathetic to coastal and woodland birds
                         and the sea is home to Dolphins Porpoise and Seals.
                     </p>
+                    <a class="read_more_button" data-content="toggle-text">Read more</a>
                 </div>
                 <div class="container-fluid">
                     <div id="map-cardigan">
@@ -251,8 +259,9 @@
                 <img src="assets/images/scotland-skye-3.jpg" class="card-img-top" alt="Picturesque Isle of Skye">
                 <div class="card-body">
                     <h5 class="card-title">ISLE OF SKYE</h5>
-                    <a class="read_more_button" data-content="toggle-text">Read more</a>
-                    <p class="card-text panel-collapse collapse in"><span class="capital">S</span>kye is one of the top locations in Scotland to
+
+                    <p class="card-text panel-collapse collapse in"><span class="capital">S</span>kye is one of the top
+                        locations in Scotland to
                         visit. It is famous for its
                         scenery and landscapes that will take your breath away.
                         <br>
@@ -275,6 +284,7 @@
                         less experienced, check both our Top Ten Skye Walks and Island Walks for detailed route
                         guides.
                     </p>
+                    <a class="read_more_button" data-content="toggle-text">Read more</a>
                 </div>
                 <div class="container-fluid">
                     <div id="map-skye">
@@ -369,15 +379,15 @@
         </div>
     </footer>
 </body>
-    <!-- <script
+<!-- <script
             src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
         </script> -->
 
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
-    </script>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap">
+</script>
 
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/maps.js"></script>
-    
+<script src="assets/js/script.js"></script>
+<script src="assets/js/maps.js"></script>
+
 </html>
