Buttons applied to maps

--- a/index.html
+++ b/index.html
@@ -173,6 +173,17 @@
                 <div class="container-fluid">
                     <div id="map-brighton">
                     </div>
+                    <div class = "row buttons-row">
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Activities</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Restaurants</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Hotels</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -214,6 +225,17 @@
                 <div class="container-fluid">
                     <div id="map-newquay">
                     </div>
+                    <div class = "row buttons-row">
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Activities</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Restaurants</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Hotels</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -250,6 +272,17 @@
                 </div>
                 <div class="container-fluid">
                     <div id="map-cardigan">
+                    </div>
+                    <div class = "row buttons-row">
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Activities</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Restaurants</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Hotels</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -288,6 +321,17 @@
                 </div>
                 <div class="container-fluid">
                     <div id="map-skye">
+                    </div>
+                    <div class = "row buttons-row">
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Activities</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Restaurants</button>
+                        </div>
+                        <div class = "col col-lg-2">
+                            <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Hotels</button>
+                        </div>
                     </div>
                 </div>
             </div>
