Interest cards produced

--- a/index.html
+++ b/index.html
@@ -333,6 +333,127 @@
                             <button type = "button" class = "btn btn-info" data-toggle = "button" aria-pressed ="false">Hotels</button>
                         </div>
                     </div>
+
+                    <!-- Activities Interest cards -->
+
+                    <div id = "activities-int">
+                        <div>
+                            <h2 class = "int-head"> Recommendations</h2>
+                        </div>
+                        <div class = "row">
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended activity</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended activity</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended activity</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Restaurants Interest cards -->
+
+                    <div id = "restaurants-int">
+                        <div>
+                            <h2 class = "int-head"> Recommendations</h2>
+                        </div>
+                        <div class = "row">
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended restaurant</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended restaurant</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended restaurant</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Hotels Interest cards -->
+
+                    <div id = "hotels-int">
+                        <div>
+                            <h2 class = "int-head"> Recommendations</h2>
+                        </div>
+                        <div class = "row">
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended Hotel</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended Hotel</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class = "col-12 col-sm-4 int-cards">
+                                <div class = "card mx-auto h-100">
+                                    <img src ="assets/images/brighton-pier.jpg" class = "card-img-top" alt ="">
+                                    <div class = "card-body d-flex flex-column">
+                                        <h5 class = "card-title-int card-head">a recommended Hotel</h5>
+                                        <p class = "card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class = "btn btn-info mt-auto">more info</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
