Map and marker JS adapted, rewuires more content

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 </script> -->
 
 <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries=places" async defer>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries=places" async>
 </script>
 
 <script src="assets/js/script.js"></script>
