added mapmarker styling file at end of index.html to capture updates on styling and adjusted styling to suit

--- a/index.html
+++ b/index.html
@@ -575,4 +575,6 @@
 <script src="assets/js/script.js"></script>
 <script src="assets/js/maps.js"></script>
 
+<link rel="stylesheet" href="assets/css/mapmarkerstyle.css">
+
 </html>
